alpine isn't the default distro

--- a/1.7/alpine/Makefile
+++ b/1.7/alpine/Makefile
@@ -4,7 +4,7 @@ VERSION = 1.7.5
 SHA256 = 4e834513a2079f8cbbd357502cccaac9507fd00a1efe672375798858ff291815
 
 OS=alpine
-TAGS = 1.7 1.7-$(OS) 
+TAGS = 1.7-$(OS) 
 REPO = dil001/golang-arm64
 
 build:
